# short-link-api

./: .gitignore  Dockerfile  ReadME.md  dist.env  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 4b0bd285feb4_add_redirect_count_and_last_redirect.py  62bca982167c_add_shorturls_model.py  c29fe8ae52ae_add_shorturls_model.py
src/: __init__.py  main.py
src/api/: routers.py
src/core/: config.py  database.py  exceptions.py  lifespan.py
src/models/: __init__.py  urls.py
src/schemas/: schema.py
src/services/: shorten.py
tests/: conftest.py
tests/unit/schemas/: test_shorten_schemas.py
tests/unit/services/: test_shorten_service.py
